Able to system tests against a local cloud environment.
We can now see the system tests failing due to the session not being serizable.

Either maven profiles are a nightmare, or I don't know how to use them properly, or both; anyway:
- Make cargo optional when running in integrated tests profile. This way we can run against cargo or a local cloud.
You need to activate cargo profile to start and stop container with cargo.
- Separate cloudbees properties and saucelabs properties
- Add a test environment to run the server and operate on the database and make it the default

--HG--
rename : etc/test.properties => etc/default.properties
rename : etc/development.properties => etc/environments/development.properties
rename : etc/integration.properties => etc/environments/integration.properties
rename : etc/production.properties => etc/environments/production.properties
rename : etc/development.properties => etc/environments/test.properties
rename : etc/cloudbees.properties => etc/targets/cloudbees.properties
rename : etc/local.properties => etc/targets/local.properties

--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -184,13 +184,7 @@
 
     <profiles>
         <profile>
-            <id>integration</id>
-            <activation>
-                <property>
-                    <name>env</name>
-                    <value>integration</value>
-                </property>
-            </activation>
+            <id>int-testing</id>
             <build>
                 <plugins>
                     <!--*** Run integration tests with failsafe plugin ***-->
@@ -216,10 +210,8 @@
                                 <server.lifecycle>external</server.lifecycle>
                                 <browser.lifecycle>remote</browser.lifecycle>
                                 <browser.remote.url>${selenium.server.url}</browser.remote.url>
-                                <browser.remote.capability.browserName>${selenium.server.browser}
-                                </browser.remote.capability.browserName>
-                                <browser.remote.capability.version>${selenium.server.browser.version}
-                                </browser.remote.capability.version>
+                                <browser.remote.capability.browserName>${selenium.server.browser}</browser.remote.capability.browserName>
+                                <browser.remote.capability.version>${selenium.server.browser.version}</browser.remote.capability.version>
                                 <browser.remote.capability.name>PetStore System Tests</browser.remote.capability.name>
                             </systemPropertyVariables>
                         </configuration>
@@ -260,7 +252,13 @@
                             </execution>
                         </executions>
                     </plugin>
-
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>cargo</id>
+            <build>
+                <plugins>
                     <plugin>
                         <groupId>org.codehaus.cargo</groupId>
                         <artifactId>cargo-maven2-plugin</artifactId>
@@ -275,7 +273,7 @@
                                     <groupId>tomcat</groupId>
                                     <artifactId>apache-tomcat</artifactId>
                                     <version>5.5.23</version>
-                                    <extractDir>appserver</extractDir>
+                                    <extractDir>${basedir}/appserver</extractDir>
                                 </artifactInstaller>
                                 <systemProperties>
                                     <jdbc.driverClassName>${test.jdbc.driverClassName}</jdbc.driverClassName>
