--- a/etc/environments/production.properties
+++ b/etc/environments/production.properties
@@ -1,9 +1,9 @@
-context.path:
+context.path: /petstore
 server.port: 80
 
 log.file: production.log
 
-jdbc.url: jdbc:mysql://${database.server}:${database.port}/petstore-prod
+database: petstore-prod
 jdbc.username: sysadmin
 
 timeServer.host: time.nist.gov
