Generate logs in module target directories.

--- a/etc/default.properties
+++ b/etc/default.properties
@@ -1,9 +1,9 @@
-log.dir: ${main.basedir}/logs
+log.dir: ${project.build.directory}/logs
 
 jdbc.driverClassName: com.mysql.jdbc.Driver
 hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
-test.log.dir: ${main.basedir}/logs
+test.log.dir: ${project.build.directory}/logs
 test.log.file: test.log
 
 test.database: petstore-test
