--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -266,14 +266,13 @@
                         <configuration>
                             <wait>false</wait>
                             <container>
-                                <log>${main.basedir}/logs/cargo.log</log>
+                                <log>${test.log.dir}/logs/cargo.log</log>
                                 <containerId>tomcat5x</containerId>
                                 <timeout>60000</timeout>
                                 <artifactInstaller>
                                     <groupId>tomcat</groupId>
                                     <artifactId>apache-tomcat</artifactId>
                                     <version>5.5.23</version>
-                                    <extractDir>${basedir}/appserver</extractDir>
                                 </artifactInstaller>
                                 <systemProperties>
                                     <jdbc.driverClassName>${test.jdbc.driverClassName}</jdbc.driverClassName>
@@ -283,8 +282,7 @@
                                     <hibernate.dialect>${test.hibernate.dialect}</hibernate.dialect>
                                     <timeServer.host>${test.timeServer.host}</timeServer.host>
                                     <timeServer.port>${test.timeServer.port}</timeServer.port>
-                                    <log4j.configuration>${project.basedir}/src/test/resources/log4j.xml
-                                    </log4j.configuration>
+                                    <log4j.configuration>${project.basedir}/src/test/resources/log4j.xml</log4j.configuration>
                                 </systemProperties>
                             </container>
                             <configuration>
