Minimalistic wiring of simpleframework
System tests will run both the legacy spring app and the new simple app in parallel.

--HG--
rename : petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/server/SingleWebApp.java => petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/server/SimpleWebApp.java

--- a/petstore-app/pom.xml
+++ b/petstore-app/pom.xml
@@ -28,6 +28,11 @@
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.simpleframework</groupId>
+            <artifactId>simple</artifactId>
+            <version>4.1.21</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
