--- a/petstore-system-tests/src/test/resources/system/legacy.properties
+++ b/petstore-system-tests/src/test/resources/system/legacy.properties
@@ -1,9 +1,9 @@
 server.scheme: http
-server.host: localhost
-server.port: 8808
-server.context.path:
+server.host: ${test.server.host}
+server.port: ${test.server.port}
+server.context.path: ${context.path}
 server.webapp.path: ${project.parent.basedir}/petstore-app/src/main/webapp
-server.lifecycle: simple
+server.lifecycle: lasting
 
 browser.lifecycle: lasting
 ## Run against selenium server by using:
