Prevent log4j from complaining when running the tests

--- a/petstore-domain/pom.xml
+++ b/petstore-domain/pom.xml
@@ -23,6 +23,10 @@
 			<artifactId>hibernate-annotations</artifactId>
 		</dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
