Build infrastructure jar with Buildr
--HG--
rename : petstore-infrastructure/pom.xml => infrastructure/pom.xml
rename : petstore-infrastructure/src/main/java/META-INF/MANIFEST.MF => infrastructure/src/main/java/META-INF/MANIFEST.MF
rename : petstore-infrastructure/src/main/java/com/pyxis/petstore/Factory.java => infrastructure/src/main/java/com/pyxis/petstore/Factory.java
rename : petstore-infrastructure/src/main/java/com/pyxis/petstore/persistence/PersistentItemInventory.java => infrastructure/src/main/java/com/pyxis/petstore/persistence/PersistentItemInventory.java
rename : petstore-infrastructure/src/main/java/com/pyxis/petstore/persistence/PersistentOrderBook.java => infrastructure/src/main/java/com/pyxis/petstore/persistence/PersistentOrderBook.java
rename : petstore-infrastructure/src/main/java/com/pyxis/petstore/persistence/PersistentOrderNumberSequence.java => infrastructure/src/main/java/com/pyxis/petstore/persistence/PersistentOrderNumberSequence.java
rename : petstore-infrastructure/src/main/java/com/pyxis/petstore/persistence/PersistentProductCatalog.java => infrastructure/src/main/java/com/pyxis/petstore/persistence/PersistentProductCatalog.java
rename : petstore-infrastructure/src/main/java/com/pyxis/petstore/service/SimplePhotoFileStore.java => infrastructure/src/main/java/com/pyxis/petstore/service/SimplePhotoFileStore.java
rename : petstore-infrastructure/src/main/resources/clock.xml => infrastructure/src/main/resources/clock.xml
rename : petstore-infrastructure/src/main/resources/hibernate.cfg.xml => infrastructure/src/main/resources/hibernate.cfg.xml
rename : petstore-infrastructure/src/main/resources/persistence.xml => infrastructure/src/main/resources/persistence.xml
rename : petstore-infrastructure/src/main/scripts/migrations/20100218205002_create_products.sql => infrastructure/src/main/scripts/migrations/20100218205002_create_products.sql
rename : petstore-infrastructure/src/main/scripts/migrations/20100226153955_add_product_description.sql =>

--- a/infrastructure/src/test/resources/integration/test.properties
+++ b/infrastructure/src/test/resources/integration/test.properties
@@ -4,4 +4,4 @@ jdbc.username: ${test.jdbc.username}
 jdbc.password: ${test.jdbc.password}
 hibernate.dialect: ${test.hibernate.dialect}
 
-migrations.path = ${project.basedir}/src/main/scripts/migrations
+migrations.path = ${migrations.dir}
