Replace maven build with Buildr for webapp.
Jetty can be started with buildr jetty.
Keep maven build around to run system tests and to keep IntelliJ happy for now.

--HG--
rename : petstore-app/pom.xml => app/pom.xml
rename : petstore-app/src/main/java/com/pyxis/petstore/controller/CartItemsController.java => app/src/main/java/com/pyxis/petstore/controller/CartItemsController.java
rename : petstore-app/src/main/java/com/pyxis/petstore/controller/HomeController.java => app/src/main/java/com/pyxis/petstore/controller/HomeController.java
rename : petstore-app/src/main/java/com/pyxis/petstore/controller/ItemsController.java => app/src/main/java/com/pyxis/petstore/controller/ItemsController.java
rename : petstore-app/src/main/java/com/pyxis/petstore/controller/ProductsController.java => app/src/main/java/com/pyxis/petstore/controller/ProductsController.java
rename : petstore-app/src/main/java/com/pyxis/petstore/controller/PurchasesController.java => app/src/main/java/com/pyxis/petstore/controller/PurchasesController.java
rename : petstore-app/src/main/java/com/pyxis/petstore/controller/ReceiptsController.java => app/src/main/java/com/pyxis/petstore/controller/ReceiptsController.java
rename : petstore-app/src/main/java/com/pyxis/petstore/controller/SessionController.java => app/src/main/java/com/pyxis/petstore/controller/SessionController.java
rename : petstore-app/src/main/java/com/pyxis/petstore/helpers/VelocityToolbox2View.java => app/src/main/java/com/pyxis/petstore/helpers/VelocityToolbox2View.java
rename : petstore-app/src/main/resources/ValidationMessages.properties => app/src/main/resources/ValidationMessages.properties
rename : petstore-app/src/main/resources/com/pyxis/petstore/helpers/petstore.vm => app/src/main/resources/com/pyxis/petstore/helpers/petstore.vm
rename : petstore-app/src/main/resources/database.properties => app/src/main/resources/database.properties
rename : petstore-app/src/main/resources/log4j.xml => app/src/main/resources/log4j.xml
rename : pe

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -121,6 +121,7 @@
 
     <properties>
         <main.basedir>${project.parent.basedir}</main.basedir>
+        <webapp.dir>${project.basedir}/src/main/webapp</webapp.dir>
     </properties>
 
     <pluginRepositories>
