--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -24,6 +24,38 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javassist</groupId>
+            <artifactId>javassist</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.carbonfive.db-support</groupId>
             <artifactId>db-migration</artifactId>
             <scope>test</scope>
@@ -46,6 +78,7 @@
 
     <properties>
         <main.basedir>${project.parent.basedir}</main.basedir>
+        <migrations.dir>${project.basedir}/src/main/scripts/migrations</migrations.dir>
     </properties>
 
     <build>
@@ -70,7 +103,7 @@
                     <url>${jdbc.url}</url>
                     <username>${jdbc.username}</username>
                     <password>${jdbc.password}</password>
-                    <migrationsPath>${project.basedir}/src/main/scripts/migrations</migrationsPath>
+                    <migrationsPath>${migrations.dir}</migrationsPath>
                 </configuration>
                 <dependencies>
                     <dependency>
