--- a/build.yaml
+++ b/build.yaml
@@ -2,8 +2,52 @@
 gems:
   
 repositories:
-  remote: 
+  remote:
     - http://repo1.maven.org/maven2
+
+artifacts:
+  commons_beanutils: commons-beanutils:commons-beanutils:jar:1.7.0
+  commons_digester: commons-digester:commons-digester:jar:1.8
+  commons_chain: commons-chain:commons-chain:jar:1.1
+  commons_lang: commons-lang:commons-lang:jar:2.4
+  commons_dbcp: commons-dbcp:commons-dbcp:jar:1.2
+  commons_pool: commons-pool:commons-pool:jar:1.3
+  asm: asm:asm:jar:3.1
+  cglib: cglib:cglib:jar:2.2
+  javassist: javassist:javassist:jar:3.8.0.GA
+  hibernate_core: org.hibernate:hibernate-core:jar:3.5.1-Final
+  hibernate_annotations: org.hibernate:hibernate-annotations:jar:3.5.1-Final
+  hibernate_validator: org.hibernate:hibernate-validator:jar:4.0.2.GA
+  validation_api: javax.validation:validation-api:jar:1.0.0.GA
+  spring_core: org.springframework:spring-core:jar:3.0.2.RELEASE
+  spring_context: org.springframework:spring-context:jar:3.0.2.RELEASE
+  spring_tx: org.springframework:spring-tx:jar:3.0.2.RELEASE
+  spring_jdbc: org.springframework:spring-jdbc:jar:3.0.2.RELEASE
+  spring_orm: org.springframework:spring-orm:jar:3.0.2.RELEASE
+  spring_web: org.springframework:spring-web:jar:3.0.2.RELEASE
+  spring_mvc: org.springframework:spring-webmvc:jar:3.0.2.RELEASE
+  spring_support: org.springframework:spring-context-support:jar:3.0.2.RELEASE
+  spring_test: org.springframework:spring-test:jar:3.0.2.RELEASE
+  velocity_engine: org.apache.velocity:velocity:jar:1.6.3
+  velocity_tools: org.apache.velocity:velocity-tools:jar:2.0
+  sitemesh: opensymphony:sitemesh:jar:2.4.1
+  carbon_5: com.carbonfive.db-support:db-migration:jar:0.9.9-m2
+  mysql: mysql:mysql-connector-java:jar:5.1.11
+  servlet_api: javax.servlet:servlet-api:jar:2.5
+  url_rewrite: org.tuckey:urlrewritefilter:jar:3.1.0
+  neko_html: nekohtml:nekohtml:jar:1.9.6.2
+  log4j: log4j:log4j:jar:1.2.12
+  slf4j_api: org.slf4j:slf4j-api:jar:1.5.6
+  slf4j_log4j: org.slf4j:slf4j-log4j12:jar:1.5.6
+  slf4j_jcl: org.slf4j:jcl-over-slf4j:jar:1.5.6
+  slf4j_silent: org.slf4j:slf4j-nop:jar:1.5.6
+  hamcrest_core: org.hamcrest:hamcrest-core:jar:1.3.RC2
+  hamcrest_library: org.hamcrest:hamcrest-library:jar:1.3.RC2
+  hamcrest_extra: org.testinfected.hamcrest-matchers:core-matchers:jar:1.5
+  hamcrest_dom: org.testinfected.hamcrest-matchers:dom-matchers:jar:1.5
+  hamcrest_spring: org.testinfected.hamcrest-matchers:spring-matchers:jar:1.5
+  hamcrest_validation: org.testinfected.hamcrest-matchers:validation-matchers:jar:1.5
+  hamcrest_jpa: org.testinfected.hamcrest-matchers:jpa-matchers:jar:1.5
 
 junit: 4.8.1
 jmock: 2.5.1
