--- a/petstore-system-tests/src/test/resources/system/legacy.properties
+++ b/petstore-system-tests/src/test/resources/system/legacy.properties
@@ -2,7 +2,7 @@ server.scheme: http
 server.host: ${test.server.host}
 server.port: ${test.server.port}
 server.context.path: ${context.path}
-server.webapp.path: ${project.parent.basedir}/petstore-app/src/main/webapp
+server.webapp.path: ${project.parent.basedir}/app/src/main/webapp
 server.lifecycle: lasting
 
 browser.lifecycle: lasting
