--- a/petstore-system-tests/src/test/resources/system/test.properties
+++ b/petstore-system-tests/src/test/resources/system/test.properties
@@ -2,7 +2,7 @@ server.scheme: http
 server.host: localhost
 server.port: 8808
 server.context.path:
-server.webapp.path: ${project.parent.basedir}/petstore-app/src/main/webapp
+server.webapp.path: ${project.parent.basedir}/app/src/main/webapp
 server.lifecycle: simple
 
 browser.lifecycle: lasting
