--- a/profiles.yaml
+++ b/profiles.yaml
@@ -1,14 +1,22 @@
 defaults: &defaults
-  jdbc.driverClassName: com.mysql.jdbc.Driver
-  hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   test.log.file: test.log
   test.jdbc.driverClassName: com.mysql.jdbc.Driver
+  test.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   test.jdbc.url: jdbc:mysql://localhost:3306/petstore-test
   test.jdbc.username: testbot
   test.jdbc.password: petstore
-  test.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   test.timeServer.port: 10013
-
+  test.server.host: localhost
+  test.jdbc.password: petstore
+  jdbc.driverClassName: com.mysql.jdbc.Driver
+  hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  
 development:
   filter:
     <<: *defaults
+    jdbc.url: jdbc:mysql://localhost:3306/petstore-dev
+    jdbc.username: petstore
+    jdbc.password: petstore
+    context.path: /petstore
+    log.file: development.log    
+  server.port: 8080    
