Buildfile now runs system tests

--- a/petstore-system-tests/src/test/resources/system/test.properties
+++ b/petstore-system-tests/src/test/resources/system/test.properties
@@ -2,7 +2,7 @@ server.scheme: http
 server.host: localhost
 server.port: 8808
 server.context.path:
-server.webapp.path: ${project.parent.basedir}/app/src/main/webapp
+server.webapp.path: ${webapp.dir}
 server.lifecycle: simple
 
 browser.lifecycle: lasting
@@ -19,7 +19,7 @@ jdbc.username: ${test.jdbc.username}
 jdbc.password: ${test.jdbc.password}
 hibernate.dialect: ${test.hibernate.dialect}
 
-migrations.path = ${project.parent.basedir}/infrastructure/src/main/scripts/migrations
+migrations.path =  ${migrations.dir}
 
 timeServer.host: ${test.timeServer.host}
 timeServer.port: ${test.timeServer.port}
