--- a/profiles.yaml
+++ b/profiles.yaml
@@ -19,4 +19,31 @@ development:
     jdbc.password: petstore
     context.path: /petstore
     log.file: development.log    
-  server.port: 8080    
+    test.server.port: 8090
+  server.port: 8090    
+  
+production:
+  filter:
+    <<: *defaults
+    jdbc.url: jdbc:mysql://localhost:3306/petstore-prod
+    jdbc.username: sysadmin
+    jdbc.password: petstore
+    context.path: /petstore
+    test.server.port: 80
+    log.file: production.log
+    timeServer.host: time.nist.gov
+    timeServer.port: 13  
+  server.port: 80
+  
+integration:
+  filter:
+    <<: *defaults
+    jdbc.url: jdbc:mysql://localhost:3306/petstore-edge
+    jdbc.username: integrator
+    jdbc.password: petstore
+    context.path: /petstore
+    test.server.port: 8000
+    log.file: integration.log
+    timeServer.host: localhost
+    timeServer.port: 10000    
+  server.port: 8000  
