--- a/build.yaml
+++ b/build.yaml
@@ -7,10 +7,11 @@ repositories:
 
 artifacts:
   commons_beanutils: commons-beanutils:commons-beanutils:jar:1.7.0
-  commons_digester: commons-digester:commons-digester:jar:1.8
-  commons_chain: commons-chain:commons-chain:jar:1.1
-  commons_lang: commons-lang:commons-lang:jar:2.4
   commons_dbcp: commons-dbcp:commons-dbcp:jar:1.2
+  commons_chain: commons-chain:commons-chain:jar:1.1
+  commons_collections: commons-collections:commons-collections:jar:3.2.1
+  commons_digester: commons-digester:commons-digester:jar:1.8
+  commons_lang: commons-lang:commons-lang:jar:2.4
   commons_pool: commons-pool:commons-pool:jar:1.3
   asm: asm:asm:jar:3.1
   cglib: cglib:cglib:jar:2.2
@@ -28,11 +29,14 @@ artifacts:
   spring_mvc: org.springframework:spring-webmvc:jar:3.0.2.RELEASE
   spring_support: org.springframework:spring-context-support:jar:3.0.2.RELEASE
   spring_test: org.springframework:spring-test:jar:3.0.2.RELEASE
+  simpleframework: org.simpleframework:simple:jar:4.1.21
   velocity_engine: org.apache.velocity:velocity:jar:1.6.3
   velocity_tools: org.apache.velocity:velocity-tools:jar:2.0
   sitemesh: opensymphony:sitemesh:jar:2.4.1
   carbon_5: com.carbonfive.db-support:db-migration:jar:0.9.9-m2
   mysql: mysql:mysql-connector-java:jar:5.1.11
+  jetty: org.mortbay.jetty:jetty:jar:6.1.26
+  jetty_util: org.mortbay.jetty:jetty-util:jar:6.1.26
   servlet_api: javax.servlet:servlet-api:jar:2.5
   url_rewrite: org.tuckey:urlrewritefilter:jar:3.1.0
   neko_html: nekohtml:nekohtml:jar:1.9.6.2
@@ -48,6 +52,8 @@ artifacts:
   hamcrest_spring: org.testinfected.hamcrest-matchers:spring-matchers:jar:1.5
   hamcrest_validation: org.testinfected.hamcrest-matchers:validation-matchers:jar:1.5
   hamcrest_jpa: org.testinfected.hamcrest-matchers:jpa-matchers:jar:1.5
-
+  selenium_firefox_driver: org.seleniumhq.selenium:selenium-firefox-driver:jar:2.21.0
+  windowlicker_web: com.googlecode.windowlicker:windowlicker-web:jar:r268
+  
 junit: 4.8.1
 jmock: 2.5.1
