Complete rewrite of the web stack
--HG--
rename : main/src/main/java/org/testinfected/petstore/Main.java => main/src/main/java/org/testinfected/petstore/Launcher.java
rename : main/src/test/java/test/support/com/pyxis/petstore/web/PetStoreDriver.java => main/src/test/java/test/support/com/pyxis/petstore/web/ApplicationDriver.java
rename : main/src/test/java/test/support/com/pyxis/petstore/web/server/SingleWebApp.java => main/src/test/java/test/support/com/pyxis/petstore/web/server/OldServerDriver.java
rename : main/src/test/java/test/support/com/pyxis/petstore/web/server/SimpleWebApp.java => main/src/test/java/test/support/com/pyxis/petstore/web/server/PetStoreDriver.java
rename : main/src/test/java/test/system/com/pyxis/petstore/BrowseCatalogFeature.java => main/src/test/java/test/system/com/pyxis/petstore/features/BrowseCatalogFeature.java
rename : webapp/src/main/java/org/testinfected/petstore/Application.java => webapp/src/main/java/org/testinfected/petstore/Server.java
rename : webapp/src/main/java/org/testinfected/petstore/PetStoreEngine.java => webapp/src/main/java/org/testinfected/petstore/pipeline/Application.java
rename : webapp/src/main/java/org/testinfected/petstore/StaticResource.java => webapp/src/main/java/org/testinfected/petstore/pipeline/FileServer.java
rename : webapp/src/main/java/org/testinfected/petstore/Charsets.java => webapp/src/main/java/org/testinfected/petstore/util/Charsets.java
rename : webapp/src/main/java/org/testinfected/petstore/ExceptionImposter.java => webapp/src/main/java/org/testinfected/petstore/util/ExceptionImposter.java
rename : webapp/src/main/java/org/testinfected/petstore/MimeType.java => webapp/src/main/java/org/testinfected/petstore/util/MimeTypes.java
rename : webapp/src/main/java/org/testinfected/petstore/Streams.java => webapp/src/main/java/org/testinfected/petstore/util/Streams.java
rename : webapp/src/main/resources/assets/images/favicon.ico => webapp/src/main/resources/assets/favicon.ico
rename : webapp/src/test/j

--- a/build.yaml
+++ b/build.yaml
@@ -31,6 +31,7 @@ artifacts:
   spring_test: org.springframework:spring-test:jar:3.0.2.RELEASE
   simpleframework: org.simpleframework:simple:jar:4.1.21
   jmustache: com.samskivert:jmustache:jar:1.5
+  time: org.testinfected.time:time:jar:1.0
   velocity_engine: org.apache.velocity:velocity:jar:1.6.3
   velocity_tools: org.apache.velocity:velocity-tools:jar:2.0
   sitemesh: opensymphony:sitemesh:jar:2.4.1
