Add automatic database migrations during integration and system testing.
Carbon5 db-migration was dropped in favor of Flyway, which has no dependency, and can locate migrations in jars.

Still to do:
- Option to migrate the database on application startup
- Buildr tasks for running the migrations (clean, reset, migrate, info, etc.)

--HG--
rename : persistence/src/main/java/org/testinfected/petstore/jdbc/DriverManagerConnectionSource.java => persistence/src/main/java/org/testinfected/petstore/jdbc/DriverManagerDataSource.java
rename : oldinfra/src/main/scripts/migrations/20100408202400_rename_item_reference_number_to_number.sql => persistence/src/main/resources/db/migration/10__rename_item_reference_number_to_number.sql
rename : oldinfra/src/main/scripts/migrations/20100413015512_add_description_and_unit_price_to_line_item.sql => persistence/src/main/resources/db/migration/11__add_description_and_unit_price_to_line_item.sql
rename : oldinfra/src/main/scripts/migrations/20100413024430_add_order_line_to_line_item.sql => persistence/src/main/resources/db/migration/12__add_order_line_to_line_item.sql
rename : oldinfra/src/main/scripts/migrations/20100414164731_create_payment_methods.sql => persistence/src/main/resources/db/migration/13__create_payment_methods.sql
rename : oldinfra/src/main/scripts/migrations/20100414184750_add_payment_type_to_payments.sql => persistence/src/main/resources/db/migration/14__add_payment_type_to_payments.sql
rename : oldinfra/src/main/scripts/migrations/20100825140227_make_order_number_unique.sql => persistence/src/main/resources/db/migration/15__make_order_number_unique.sql
rename : oldinfra/src/main/scripts/migrations/20100226153955_add_product_description.sql => persistence/src/main/resources/db/migration/2__add_product_description.sql
rename : oldinfra/src/main/scripts/migrations/20100226211757_add_product_photo.sql => persistence/src/main/resources/db/migration/3__add_product_photo.sql
rename : oldinfra/src/main/scripts/migrations/2010

--- a/main/src/test/resources/test.properties
+++ b/main/src/test/resources/test.properties
@@ -8,6 +8,6 @@ browser.lifecycle: lasting
 #browser.remote.capability.javascriptEnabled: true
 #browser.remote.capability. ...
 
-jdbc.url: jdbc:mysql://localhost:3306/petstore-test
+jdbc.url: jdbc:mysql://localhost:3306/petstore_test
 jdbc.username: testbot
 jdbc.password: petstore
