--- a/main/src/test/resources/system/legacy.properties
+++ b/main/src/test/resources/system/legacy.properties
@@ -13,13 +13,11 @@ browser.lifecycle: lasting
 #browser.remote.capability.javascriptEnabled: true
 #browser.remote.capability. ...
 
-jdbc.driverClassName: ${test.jdbc.driverClassName}
-jdbc.url: ${test.jdbc.url}
-jdbc.username: ${test.jdbc.username}
-jdbc.password: ${test.jdbc.password}
-hibernate.dialect: ${test.hibernate.dialect}
-
-migrations.path = ${migrations.dir}
+jdbc.driverClassName: com.mysql.jdbc.Driver
+jdbc.url: jdbc:mysql://localhost:3306/petstore_test
+jdbc.username: testbot
+jdbc.password: petstore
+hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
 timeServer.host: ${test.timeServer.host}
 timeServer.port: ${test.timeServer.port}
