--- a/profiles.yaml
+++ b/profiles.yaml
@@ -1,14 +1,11 @@
 defaults: &defaults
   test.log.file: test.log
-  test.jdbc.driverClassName: com.mysql.jdbc.Driver
-  test.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-  test.jdbc.url: jdbc:mysql://localhost:3306/petstore-test
+  test.jdbc.url: jdbc:mysql://localhost:3306/petstore_test
   test.jdbc.username: testbot
   test.jdbc.password: petstore
   test.timeServer.port: 10013
   test.server.host: localhost
   test.server.port: 8081
-  test.jdbc.password: petstore
   jdbc.driverClassName: com.mysql.jdbc.Driver
   hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   selenium.server.url: http://localhost:4444/wd/hub
