--- a/build.yaml
+++ b/build.yaml
@@ -5,8 +5,9 @@ repositories:
   remote:
 
 artifacts:
-  simpleframework: org.simpleframework:simple:jar:4.1.21
+  cli: org.testinfected:cli:jar:1.0
   time: org.testinfected.time:time:jar:1.0
+  simpleframework: org.simpleframework:simple:jar:4.1.21
   jsr305: com.google.code.findbugs:jsr305:jar:1.3.7
   guava: com.google.guava:guava:jar:12.0
   mustache: com.github.spullara.mustache.java:compiler:jar:0.8.3
