Some cleanup in system tests infrastructure

--- a/main/src/test/resources/system/legacy.properties
+++ b/main/src/test/resources/system/legacy.properties
@@ -1,9 +1,9 @@
+server.lifecycle: lasting
 server.scheme: http
 server.host: ${test.server.host}
 server.port: ${test.server.port}
-server.context.path: ${context.path}
-server.webapp.path: ${webapp.dir}
-server.lifecycle: lasting
+context.path: ${context.path}
+webapp.path: ${webapp.dir}
 
 browser.lifecycle: lasting
 ## Run against selenium server by using:
