--- a/build.yaml
+++ b/build.yaml
@@ -17,9 +17,8 @@ artifacts:
   mysql: mysql:mysql-connector-java:jar:5.1.11
 
   # -- Scope test
-  #todo update to 1.3 final
-  hamcrest_core: org.hamcrest:hamcrest-core:jar:1.3.RC2
-  hamcrest_library: org.hamcrest:hamcrest-library:jar:1.3.RC2
+  hamcrest_core: org.hamcrest:hamcrest-core:jar:1.3
+  hamcrest_library: org.hamcrest:hamcrest-library:jar:1.3
   hamcrest_extra: org.testinfected.hamcrest-matchers:core-matchers:jar:1.5
   antlr_runtime: org.antlr:antlr-runtime:jar:3.0.1
   cssselectors: com.3levers.cssselectors:cssselectors:jar:1.0
@@ -34,8 +33,7 @@ artifacts:
   slf4j_silent: org.slf4j:slf4j-nop:jar:1.5.6
   htmlunit: net.sourceforge.htmlunit:htmlunit:jar:2.9
 
-#todo update to 4.10
-junit: 4.8.1
+junit: 4.11
 jmock: 2.5.1
 
 selenium:
