--- a/main/src/main/resources/etc/development.properties
+++ b/main/src/main/resources/etc/development.properties
@@ -1,3 +1,3 @@
-jdbc.url: jdbc:mysql://localhost:3306/petstore_dev
+jdbc.url: jdbc:mysql://localhost:3306/petstore_dev?generateSimpleParameterMetadata=true
 jdbc.username: petstore
 jdbc.password: petstore
