--- a/main/src/main/resources/etc/test.properties
+++ b/main/src/main/resources/etc/test.properties
@@ -1,3 +1,3 @@
-jdbc.url: jdbc:mysql://localhost:3306/petstore_test
+jdbc.url: jdbc:mysql://localhost:3306/petstore_test?generateSimpleParameterMetadata=true
 jdbc.username: testbot
 jdbc.password: petstore
