--- a/main/src/test/resources/test.properties
+++ b/main/src/test/resources/test.properties
@@ -1,9 +1,13 @@
 server.port: 8808
 
-browser.lifecycle: lasting
+#browser.driver: firefox
+browser.driver: phantomjs
+
+browser.capability.javascriptEnabled: true
+# PhantomJS installed with homebrew on OSX
+browser.capability.phantomjs.binary.path: /usr/local/bin/phantomjs
+
 ## Run against selenium server by using:
-#browser.lifecycle: remote
+#browser.driver: remote
 #browser.remote.url: http://127.0.0.1:4444/wd/hub
-#browser.remote.capability.browserName: firefox
-#browser.remote.capability.javascriptEnabled: true
-#browser.remote.capability. ...
+#browser.capability.browserName: firefox
