Rework end-to-end tests to focus more on business rules

--- a/main/src/test/resources/test.properties
+++ b/main/src/test/resources/test.properties
@@ -1,7 +1,7 @@
 server.port: 8808
 
-#browser.driver: firefox
-browser.driver: phantomjs
+browser.driver: firefox
+#browser.driver: phantomjs
 
 browser.capability.javascriptEnabled: true
 # PhantomJS installed with homebrew on OSX
