--- a/build.yaml
+++ b/build.yaml
@@ -18,6 +18,7 @@ artifacts:
   hamcrest_library: org.hamcrest:hamcrest-library:jar:1.3
   hamcrest_extra: org.testinfected.hamcrest-matchers:core-matchers:jar:1.5
   antlr_runtime: org.antlr:antlr-runtime:jar:3.0.1
+  guava: com.google.collections:google-collections:jar:1.0-rc2
   cssselectors: com.3levers.cssselectors:cssselectors:jar:1.0
   hamcrest_dom: org.testinfected.hamcrest-matchers:dom-matchers:jar:1.5
   selenium_firefox_driver: org.seleniumhq.selenium:selenium-firefox-driver:jar:2.28.0
