--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: ruby
 rvm:
-  - jruby-18mode
+  - 1.8.7
 
 jdK:
   - oraclejdk7
+
+services: mysql
+
+before_script:
+  - mysql -e 'create database petstore_test;'
 
 script: bundle exec buildr clean install
