--- a/server/src/main/resources/etc/test.properties
+++ b/server/src/main/resources/etc/test.properties
@@ -1,3 +1,3 @@
 jdbc.url: jdbc:mysql://localhost:3306/petstore_test?generateSimpleParameterMetadata=true
-jdbc.username: testbot
-jdbc.password: petstore
+jdbc.username: root
+jdbc.password:
